# monogram

./: .gitattributes  .gitignore  .gitmodules  README.md  README_ES.md  README_KOR.md  README_RU.md  README_TR.md  README_UR.md  Readme_KOR.md  ZGitHubmonogramMATERIAL3_UPGRADE_INVENTORY.md  build-tdlib.sh  build.gradle.kts  flake.nix  gradle.properties  settings.gradle.kts
.github/workflows/: android.yml  nix-android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: adblock_keywords.txt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/main/res/raw/: keep.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-hy/: strings.xml
app/src/main/res/values-ja/: string.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-sk/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: locales_config.xml
baselineprofile/: build.gradle.kts
core/: build.gradle.kts
data/: build.gradle.kts
data/src/main/: AndroidManifest.xml
data/src/main/res/drawable/: ic_notification.xml  (+1 more)
domain/: build.gradle.kts
gradle/: libs.versions.toml
presentation/: build.gradle.kts  compose-stability.conf
presentation/src/main/cpp/: CMakeLists.txt  RLottieDecoder.cpp  RLottieDecoder.h  RLottieJni.cpp  native-lib.cpp
(+912 files in other folders)
